--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,20 +20,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: scale(0.95);
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
   }
 
-  to {
-    opacity: 1;
-    transform: scale(1);
+  100% {
+    opacity: 0;
   }
 }
 
-.animate-fadeIn {
-  animation: fadeIn 1s ease-in-out;
+.animate-fadeOut {
+  animation: fadeOut 0.5s ease-out forwards;
 }
 
 @layer utilities {
